# magus-scheme

./: .ghost  .gitignore  Cargo.toml  README.md  chibi-test-lib.scm  chibi-tests.scm  gol.scm  justfile  test.scm
.github/workflows/: arbtest.yaml  ci.yaml
examples/: lexer.rs  test_port.rs
magus_repl/: Cargo.toml
magus_repl/src/: main.rs
src/: compiler.rs  general_parser.rs  lexer.rs  lib.rs  num.rs  runtime.rs  world.rs
src/ability/: mod.rs
src/compiler/: environment.rs
src/general_parser/: gast.rs  special_forms.rs
src/runtime/: external.rs  interpreter.rs  scheme_base.rs  treewalk.rs
src/world/: any.rs  fuel.rs  userstruct.rs  value.rs
src/world/value/: port.rs
test_data/: datum_comment1.gpd  datum_comment_dotlist.gpd  datum_comment_nested.gpd  identifier_checklist.lxd  invalid_ident.lxd  just_imaginary.lxd  lexer1.lxd  multiline_string.lxd  number_crash.lxd  runon.gpd  sexpr.gpd  syntax_insensitivity.lxd  test_simple.lxd
tests/: frontend_datatest.rs
