[workspace]
resolver = "2"
members = ["."]

[workspace.package]
version = "0.1.0"
rust-version = "1.80"

[package]
name = "magus"
version.workspace = true
rust-version.workspace = true
edition = "2021"
description = "DSL implementation in Rust for magicflute"

[[test]]
name = "frontend_datatest"
harness = false

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "5a7534b883b703f23cfb8c3cfdf033460aa77ea9" }
icu_casemap = "1.5"
lasso = { version = "0.7.2" }
logos = { version = "0.14.1" }
# petgraph = "0.6.5"
rowan = "0.15.15"
thiserror = "1.0.63"

[dev-dependencies]
arbtest = "0.3.1"
assert2 = "0.3.14"
datatest-stable = "0.2.9"
